<resources>
    <string name="app_name">ESPERTO WATCH</string>
    <string name="team_name">Esperto Watch</string>
    <string name="team_alt">Esperto</string>
    <string name="title_activity_register">Register</string>
    <string name="activity_scan">Select a Device</string>
    <string name="app_desc_top">Wireless. Wearable. Open Source.</string>

    <!-- Strings related to Login Activity -->
    <string name="prompt_first_name">First Name</string>
    <string name="username">Email</string>
    <string name="prompt_last_name">Last Name</string>
    <string name="prompt_username">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_device">Register Device</string>
    <string name="prompt_password_again">Confirm Password</string>
    <string name="prompt_register">Get Started</string>
    <string name="prompt_register_question">Not a member yet?</string>
    <string name="action_sign_in">Create Account</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_login">Login</string>
    <string name="error_invalid_pass">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="continue_prompt">Continue</string>
    <string name="error_message">Authentication failure.</string>
    <string name="try_again">Incorrect username or password, please try again :)</string>
    <string name="sign_up_error">We could not create your account, please try again :)</string>
    <string name="wrong_confirmation_code">You have entered the wrong code, please try again. :)</string>
    <string name="internet_required">Connect to WiFi or data then please try again :)</string>
    <string name="enable_location">Your location is disabled, do you want to enable it in order to search for an Esperto watch?</string>
    <string name="location_requirec">Location permissions are required for Bluetooth scanning</string>
    <string name="ble_not_supported">Bluetooth LE is not supported on this device</string>
    <string name="watch_disconnected">Esperto Watch disconnected</string>
    <string name="ok">OK</string>

    <!-- Strings related to Register activity-->
    <string name="default_setting">Default Setting</string>
    <string name="goal_setting">Choose Goal Setting</string>

    <!-- Strings related to Summary Activity -->
    <string name="title_heart">Heart Rate</string>
    <string name="title_activity_summary">Esperto Watch</string>
    <string name="title_profile">Summary</string>
    <string name="title_steps">Step Count</string>
    <string name="title_heart_rate">Heart Rate</string>
    <string name="title_metrics">My Current Metrics</string>
    <string name="title_heart_rate_chart">My Heart Rate</string>
    <string name="title_steps_chart">My Step Count</string>
    <string name="app_name_lower">Esperto Watch</string>
    <string name="title_greeting">Welcome</string>
    <string name="connected">connected</string>
    <string name="connecting">connected</string>
    <string name="main_user">mmacmahon</string>
    <string name="esperto_device_name">Esperto</string>

    <string-array name="hr_graph_options_array">
        <item>Last 7 Days</item>
        <item>Last Hour</item>
        <item>Last 31 Days</item>
        <item>Last Year</item>
        <item>All</item>
    </string-array>

    <string-array name="steps_graph_options_array">
        <item>Last 7 Days</item>
        <item>Last Hour</item>
        <item>Last 31 Days</item>
        <item>Last Year</item>
        <item>All</item>
    </string-array>

    <!-- Strings related to Cognito -->
    <string name="cognito_web_domain">esperto-watch-app.auth.us-east-1.amazoncognito.com</string>
    <string name="cognito_client_id">3m4tc04cp9j5b6n19o9f4q9eqm</string>
    <string name="cognito_client_secret">8vbtptvd123itikbshjpe4udu61ir0ol4qffbh5bpuu6kori12v</string>
    <string name="cognito_region">us-east-1</string>
    <string name="cognito_userpool_id">us-east-1_RL95jbC5g</string>

</resources>
