<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:background="@color/colorWhite"
    android:orientation="vertical"

    tools:context="espertolabs.esperto_ble_watch.RegisterActivity"
    android:weightSum="1">

    <include layout="@layout/my_toolbar"
        android:id="@+id/including" />

    <ScrollView
        android:id="@+id/register_form"
        android:layout_width="305dp"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/device_register_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="1">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/first_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="true"
                    android:clickable="true"
                    android:focusableInTouchMode="true"
                    android:hint="@string/prompt_first_name"
                    android:inputType="textPersonName"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/last_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="true"
                    android:clickable="true"
                    android:focusableInTouchMode="true"
                    android:hint="@string/prompt_last_name"
                    android:inputType="textPersonName"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:focusable="true"
                    android:clickable="true"
                    android:focusableInTouchMode="true"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_username"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPersonName"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:focusable="true"
                    android:clickable="true"
                    android:focusableInTouchMode="true"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/password_dup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="true"
                    android:clickable="true"
                    android:focusableInTouchMode="true"
                    android:hint="@string/prompt_password_again"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/enterGoalSetting"
                style="?attr/imageButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/goal_setting"
                android:onClick="updateGoalSetting"
                android:textAlignment="center" />

        </LinearLayout>

    </ScrollView>

    <ImageView
        android:id="@+id/check"
        android:layout_width="125dp"
        android:layout_height="127dp"
        android:layout_weight="0.81"
        android:visibility="visible"
        app:srcCompat="@drawable/animated_check" />

    <Button
        android:id="@+id/register"
        style="?attr/buttonBarButtonStyle"
        android:layout_width="347dp"
        android:layout_height="69dp"
        android:layout_below="@+id/check"
        android:layout_centerHorizontal="true"
        android:background="@color/colorWhite"
        android:onClick="registerUser"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:text="Register"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp" />


</LinearLayout>
